--- a/main.html
+++ b/main.html
@@ -28,16 +28,16 @@
               <a class="nav-link js-scroll-trigger" href="#intro" style="color: black!important;">Intro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#percentage" style="color: black!important;">Homeless per Capita</a>
+              <a class="nav-link js-scroll-trigger" href="#percentage" style="color: black!important;">Percentage</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#total" style="color: black!important;">Total Homeless</a>
+              <a class="nav-link js-scroll-trigger" href="#total" style="color: black!important;">Total</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#veteran" style="color: black!important;"> Homeless Veterans</a>
+              <a class="nav-link js-scroll-trigger" href="#veteran" style="color: black!important;">Veterans</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#unsheltered" style="color: black!important;">Unsheltered Homeless</a>
+              <a class="nav-link js-scroll-trigger" href="#unsheltered" style="color: black!important;">Unsheltered </a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#unemployment" style="color: black!important;">Unemployment</a>
@@ -86,7 +86,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-6 text-column">
 					<h2 class="text-center">Solving Homlessness: Why is this important?</h2>
-					<h4>On any given night in the United States, more than half a million people experience homelessness.</h4>
+					<h4>On any given night in the United States, more than half a million people experience homelessness.</h4> <a href="https://endhomelessness.org/homelessness-in-america/"> (National Alliance to End Homelessness)</a>
 					<ul>
 						<li><b>Ending homelessness improves lives:</b></li>
 						<p> Being able to move back into a safe and secure home will help people improve their mental and physical health. People get to reconnect with employment, health services, education and community. </p>
