--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
 					</li>
 					</ul>        
 					<h3>Our target audience/users</h3>
-					<p>Our work is intended to serve as a reference for policymakers, journalists, advocates, and the public on trends in homelessness, unemployment and funding informstion, and living conditions at the national, state, and Continuum of Care (CoC) levels.</p>
+					<p>Our work is intended to serve as a reference for policymakers, journalists, advocates, and the public on trends in homelessness, unemployment, and funding information at the national, state, and Continuum of Care (CoC) levels.</p>
 			
 					<ul>
 						<ul> <p4>Photo Credits: <a href="https://www.governmentnews.com.au/policy-inaction-leading-to-homelessness-rise/"> © Government News</a>, <a href="https://www.alamy.com/a-young-woman-giving-money-to-homeless-beggar-man-sitting-outdoors-in-city-image229288496.html">© Alamy </a></p4>
